--- a/style2.css
+++ b/style2.css
@@ -324,17 +324,12 @@ header .fa-bars{
     opacity: 0;
 }
 
-.events .content .btn{
-   animation:fadeIn .2s linear backwards .6s;
-}
-
 .events .slide img{
     width: 100vw;
     height: 100%;
     opacity: 0.5;
     object-fit: cover;
     transform: scale(1.1);
-    transition: 1.3s;
 }
 
 .events .caption{
@@ -385,7 +380,6 @@ header .fa-bars{
     border-radius: 50%;
     opacity: 0.3;
     cursor: pointer;
-    transition: 0.2s ease-in-out;
 }
 
 .events .dots label:hover{
@@ -487,7 +481,7 @@ header .fa-bars{
     position: relative;
     margin: 24px;
     width: 320px;
-    height: 570px;
+    height: 660px;
     overflow: hidden;
     background-color: #fff;
     box-shadow: 0 0 30px 5px rgba(0, 0, 0, 0.15);
@@ -754,6 +748,10 @@ header .fa-bars{
     .home{
         background-position: left;
     }
+
+    header #toggler{
+        display: none;
+    }
 }    
       
 @media (max-width:768px){
@@ -856,13 +854,8 @@ header .fa-bars{
         opacity: 0;
         }
         
-        .events .content .btn {
-        animation: fadeIn 0.2s linear backwards 0.6s;
-        }
-        
         .events .slide img {
         opacity: 0.5;
-        transition: 1.3s;
         }
         
         .events .caption {
@@ -876,7 +869,6 @@ header .fa-bars{
         transform: translateX(-8%);
         text-shadow: var(--text-shadow);
         line-height: 1;
-        transition: 0.9s;
         }
         
         .events .caption span {
@@ -903,7 +895,7 @@ header .fa-bars{
             padding: 0.5rem 0;
             padding-top: 1rem;
             line-height: 1.5;
-            }
+        }
         
         .events .dots {
         width: 100%;
@@ -922,7 +914,6 @@ header .fa-bars{
         border-radius: 50%;
         opacity: 0.3;
         cursor: pointer;
-        transition: 0.2s ease-in-out;
         }
 
         .donate {
@@ -1188,5 +1179,19 @@ header .fa-bars{
             color: #fff;
             font-size: .7rem;
             padding: 1rem 0;
+        }
+
+        @media (max-width:364px){
+            html{
+                font-size: 45%;
+            }
+
+            .home .btn4{
+                transform: translateX(4px);
+            }
+            
+            .heading{
+                font-size: 3rem;
+            }
         }
 }
