--- a/style2.css
+++ b/style2.css
@@ -91,6 +91,21 @@ section{
     max-width: 20%;
 }
 
+.btn5{
+    display: inline-block;
+    text-align: center;
+    margin-top: -1.5rem;
+    border-radius: 5.5rem;
+    background: var(--primary-color);
+    color: var(--secondary-color);
+    padding: .4rem 1rem;
+    cursor: pointer;
+    font-size: 1rem;
+    position: absolute;
+    left: 14rem;
+    max-width: 20%;
+}
+
 .btn{
     display: inline-block;
     margin-top: 1rem;
